iptables
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# -A PREROUTING -j CT --notrack
# -A OUTPUT -j CT --notrack
COMMIT

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:WHITELIST - [0:0]
:SYN_FLOOD - [0:0]

# Block packets with bogus TCP flags
-A PREROUTING -p tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp --tcp-flags ACK,FIN FIN -j DROP
-A PREROUTING -p tcp --tcp-flags ACK,PSH PSH -j DROP
-A PREROUTING -p tcp --tcp-flags ALL ALL -j DROP
-A PREROUTING -p tcp --tcp-flags ALL NONE -j DROP
-A PREROUTING -p tcp --tcp-flags ALL FIN,PSH,URG -j DROP
-A PREROUTING -p tcp --tcp-flags ALL SYN,FIN,PSH,URG -j DROP
-A PREROUTING -p tcp --tcp-flags ALL SYN,RST,ACK,FIN,URG -j DROP

# Drop fragments in all chains
-A PREROUTING -f -j DROP

# Drop unwanted packets
-A PREROUTING -p tcp -j WHITELIST
-A WHITELIST -i lo -j RETURN
-A WHITELIST -p tcp -m tcp --dport 22 -j RETURN
-A WHITELIST -p tcp -m tcp --dport 80 -j RETURN
-A WHITELIST -p tcp -m tcp --dport 443 -j RETURN
-A WHITELIST -p tcp -m tcp --dport 25565 -j RETURN
-A WHITELIST -p tcp -m conntrack --ctstate ESTABLISHED -j RETURN
-A WHITELIST -j DROP

# Drop SYN flood packets
-A PREROUTING -p tcp --syn -j SYN_FLOOD
-A SYN_FLOOD -m limit --limit 60/s --limit-burst 100 -j RETURN
-A SYN_FLOOD -j DROP
COMMIT
